[package]
name = "wap"
version = "0.1.3"
authors = ["Jonathan Howard <jonathan@unbiased.name>"]
description = "Wap library allows you to write a web page (or node.js) app exclusively in Rust"
repository = "https://github.com/jonhere/wap"
readme = "README.md"
keywords = ["web","nodejs","wasm","webassembly","javascript"]
categories = ["web-programming"]
license = "MIT/Apache-2.0"
build = "build.rs"
edition = "2018"

[features]
default = []

# wap.js function calls produce debugging log
console-log = []

[profile.dev]
#https://github.com/rust-lang/rust/issues/46367
opt-level = 1
